--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,3 +4,92 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+html{
+    overflow-x: hidden;
+}
+
+.container{
+    margin: auto;
+    width: 95vw;
+    max-width: 1366px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+/* NAVBAR */
+.navbar{
+    padding: 1rem 0;
+    background-color: blue;
+}
+
+.navbar__nav,
+.navbar__profile {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+
+.navbar__items{
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar__search input,
+.hero__search input{
+    width: 100%;
+    padding: 0.3rem;
+}
+
+.navbar__nav .logo{
+    font-size: 2rem;
+}
+
+/* HERO */
+.hero{
+    padding: 1rem 0;
+    background-color: brown;
+}
+
+/* CONTENTS */
+section{
+    padding: 1rem 0;
+}
+
+.section__header{
+    display: flex;
+    gap: 1rem;
+    height: 40px;
+    align-items: center;
+}
+
+.section__selector{
+    border: 2px solid red;
+    border-radius: 100px;
+    overflow: hidden;
+}
+
+.section__selector a{
+    display: inline-block;
+    background-color: blue;    
+    padding: 2px 5px;
+    border-radius: 100px;
+}
+
+.section__items{
+    display: flex;
+    gap: 2rem;
+    overflow-x: auto;
+}
+
+.section__movie-card{
+    min-width: 15%;
+}
+
+.section__movie-card img{
+    max-width: 100%;
+    min-width: 200px;
+}
